# mpb

./: .clang-format  .gitignore  .mailmap  .travis.yml  AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  README_MEN.md  TODO  acx_blas.m4  acx_lapack.m4  acx_mpi.m4  autogen.sh  codemeta.json  configure.ac  configure.in  mkdocs.yml
doc/: README  acknowledgments.html  analysis-tutorial.html  developer.html  index.html  installation.html  introduction.html  license.html  user-ref.html  user-tutorial.html
doc/docs/: Acknowledgements.md  Data_Analysis_Tutorial.md  Developer_Information.md  Download.md  Guile_and_Scheme_Information.md  Installation.md  Introduction.md  License_and_Copyright.md  MPB.md  MPB_Data_Analysis_Tutorial.md  MPB_Installation.md  MPB_License_and_Copyright.md  MPB_User_Reference.md  MPB_User_Tutorial.md  MPB_tutorial.md  Python_Data_Analysis_Tutorial.md  Python_Tutorial.md  Python_User_Interface.md  Release_Notes.md  Scheme_Tutorial.md  Scheme_User_Interface.md  index.md
doc/docs_20170702_DeleteMe/: Citing_MPB.md  MIT_Photonic_Bands.md  MPB_Acknowledgements.md  MPB_Developer_Information.md  MPB_Introduction.md  MPB_download.md  MPB_manual.md  MPB_on_Debian.md  MPB_release_notes.md  The_MPB_Manual.md  The_run_function_is_not_a_loop.md
doc/mpb-mkdocs-theme/: breadcrumbs.html  footer.html
doc/mpb-mkdocs-theme/js/: extra.js
doc/site/: base.html  search.html  sitemap.xml
doc/site/Acknowledgements/: index.html
doc/site/Data_Analysis_Tutorial/: index.html
doc/site/Developer_Information/: index.html
doc/site/Download/: index.html
doc/site/Guile_and_Scheme_Information/: index.html
doc/site/Installation/: index.html
doc/site/Introduction/: index.html
doc/site/License_and_Copyright/: index.html
doc/site/MPB/: index.html
doc/site/Release_Notes/: index.html
doc/site/Scheme_Tutorial/: index.html
doc/site/Scheme_User_Interface/: index.html
doc/site/mkdocs/: search_index.json
examples/: Makefile.am  bragg.ctl  check.ctl  honey-rods.ctl  line-defect.ctl  sq-rods.ctl  strip.ctl  tri-rods.ctl  tutorial.ctl  twodim-min-tetm.ctl  wavevector.scm
m4/: acx_blas.m4  acx_lapack.m4  ax_blas.m4  ax_mpi.m4
meb/: Makefile.am  Makefile.in  elastic.c  elastic.h  elastic_constraints.c  elastic_materials.c  elastic_op.c  fields.c  materials.c  meb-split.in  meb.c  meb.h  meb.scm.in  operator.f
mpb/: Makefile.am  Makefile.in  bott.c  epsilon.c  epsilon_file.c  field-smob.c  field-smob.h  fields.c  material_grid.c  material_grid_opt.c  material_grid_opt_lp.c  material_grid_opt_sdp.c  matrix-smob.c  matrix-smob.h  medium.c  mpb-split-preinstall.in  mpb-split.1  mpb.1  mpb.c  mpb.h  mpb.scm.in  my-smob.h  sdos.c  transform.c
mpb-ctl/: Makefile.in  epsilon.c  epsilon_file.c  field-smob.c  field-smob.h  fields.c  matrix-smob.c  matrix-smob.h  mpb-split  mpb-split.in  mpb.1  mpb.c  mpb.h  mpb.scm.in  my-smob.h  photon.scm  smob.h
mpb-ctl/examples/: bragg-sine.ctl  bragg.ctl  check.ctl  diamond.ctl  dos.scm  hole-slab.ctl  honey-rods.ctl  line-defect.ctl  sq-rods.ctl  strip.ctl  tri-holes.ctl  tri-rods.ctl  tutorial.ctl
src/: Makefile.am  config.h.in  mpbconf.h.in
src/matrices/: Makefile.am  Makefile.in  README  blasglue.c  blasglue.h  eigensolver.c  eigensolver.h  eigensolver_davidson.c  eigensolver_utils.c  evectmatrix.c  linmin.c  linmin.h  matrices.c  matrices.h  minpack2-linmin.c  scalar.h  sqmatrix.c
src/matrixio/: Makefile.am  Makefile.in  evectmatrixio.c  fieldio.c  matrixio.c  matrixio.h
src/maxwell/: Makefile.am  Makefile.in  README  imaxwell.h  maxwell.c  maxwell.h  maxwell_constraints.c  maxwell_eps.c  maxwell_op.c  maxwell_pre.c  xyz_loop.h
src/util/: Makefile.am  Makefile.in  check.h  debug_malloc.c  fortranize.h  mpi_utils.c  mpi_utils.h  mpiglue.h  sphere-quad.c  verbosity.c  verbosity.h
tests/: Makefile  Makefile.am  Makefile.in  blastest.c  blastest.complex.out  blastest.out  blastest.real.out  eigs_test.c  malloctest.c  maxwell_test.c  normal_vectors.c
utils/: Makefile.am  Makefile.in  mpb-data.1  mpb-data.c
